--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="mylogo.png"
+      href="img/mylogo.png"
     />
     `
     <link
